--- a/css/styles.css
+++ b/css/styles.css
@@ -653,3 +653,58 @@ margin-bottom: 16px;
 .that-page{
     color: #404BBF;
 }
+.label-email{
+    color: #FFFFFF;
+    font-size: 16px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+.footer-section-two{
+    margin-right: 80px;
+}
+.email{
+    display: flex;
+    flex-direction: row;
+    margin-top: 16px;
+}
+.email-row{
+    width: 264px;
+height: 40px;
+border-radius: 4px;
+border: 1px solid  #FFF;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+background-color: var(--navy-blue);
+}
+input{color: #FFF;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 200% */
+    letter-spacing: 0.48px;
+    margin-right: 16px;
+}
+.submit-email-button{
+    display: inline-flex;
+padding: 8px 24px;
+justify-content: center;
+align-items: center;
+gap: 16px;
+border: none;
+border-radius: 4px;
+background: #4D5AE5;
+color:  #FFF;
+text-align: center;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; 
+letter-spacing: 0.64px;
+}
+.label-email{
+    margin-bottom: 16px;
+}
