--- a/css/styles.css
+++ b/css/styles.css
@@ -708,3 +708,27 @@ letter-spacing: 0.64px;
 .label-email{
     margin-bottom: 16px;
 }
+.window-text{
+    margin: 72px 24px 0 24px ;
+    width: 360px;
+    color: #2E2F42;
+text-align: center;
+
+/* Body Medium */
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 150% */
+letter-spacing: 0.32px;
+margin-bottom: 16px;
+}
+.svg-name{
+    display: flex;
+}
+.name-icon{
+    display: flex;
+    position: absolute;
+    top: 141px;
+    left: 40px;
+}
