--- a/css/styles.css
+++ b/css/styles.css
@@ -682,7 +682,7 @@ color: #FFF;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 200% */
+    line-height: 24px; 
     letter-spacing: 0.48px;
     margin-right: 16px;
 }
