--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ h1{
     --navy-blue: #2e2f42;
     --slate: #434455;
     --white-color: #f4f4fd;
+    --modal-color:   #8e8f99
 }
 .nav{
     color: #2e2f42;
@@ -602,6 +603,7 @@ margin-bottom: 16px;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px; 
 }   
 .is-hidden{
     opacity: 0;
@@ -705,3 +707,51 @@ margin-bottom: 16px;
 .footer-email{
     margin-left: 80px;
 }
+.modal-window-text{
+    font-weight: 500;  
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--navy-blue);
+    margin-bottom: 16px;
+}
+.modal-window-form{
+    margin-bottom: 8px;
+
+}
+.modal-window-label{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--modal-color);
+    display: block;
+    margin-bottom: 4px;
+}
+.modal-window-input-div{
+    position: relative;
+}
+.modal-window-input{
+    width: 100%;
+    height: 40px;
+    border:1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-window-input:focus{
+    border-color: #4d5ae5;
+}
+.modal-window-user-svg{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-window-input:focus .modal-window-user-svg{
+    fill: #4d5ae5;
+}
+
