--- a/css/styles.css
+++ b/css/styles.css
@@ -603,7 +603,7 @@ margin-bottom: 16px;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px; 
+    
 }   
 .is-hidden{
     opacity: 0;
@@ -623,6 +623,7 @@ margin-bottom: 16px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px; 
 }
 .modal-button{
     position: absolute;
@@ -751,7 +752,28 @@ margin-bottom: 16px;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-window-input:focus .modal-window-user-svg{
+.modal-window-input:focus + .modal-window-user-svg{
     fill: #4d5ae5;
 }
-
+.modal-window-comment-div{
+    margin-bottom: 16px;
+}
+.modal-window-textarea{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+..modal-window-textarea:focus{
+    border-color: #4d5ae5;
+    
+}
