--- a/css/styles.css
+++ b/css/styles.css
@@ -773,7 +773,27 @@ margin-bottom: 16px;
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-..modal-window-textarea:focus{
+.modal-window-textarea:focus{
     border-color: #4d5ae5;
-    
+
+}
+.checkbox-label-div{
+    margin-bottom: 24px;
+}
+.user-privacy-label{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--modal-color);
+}
+.user-privacy-label-span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; 
+    fill: transparent;
 }
