--- a/css/styles.css
+++ b/css/styles.css
@@ -137,17 +137,17 @@ h1{
 .second-section{
     padding: 120px 0;
 }
-.vissualy-hidden{
+.visualy-hidden{
     position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
- overflow: hidden;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .our-pluses{
     display: flex;
@@ -824,5 +824,4 @@ input[type="checkbox"]:checked + .user-privacy-label > .user-privacy-label-span{
     border: none;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    align-items: center;
 }
