--- a/css/styles.css
+++ b/css/styles.css
@@ -752,6 +752,7 @@ margin-bottom: 16px;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    fill: var(--navy-blue);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-window-input:focus + .modal-window-user-svg{
@@ -811,6 +812,7 @@ input[type="checkbox"]:checked + .user-privacy-label > .user-privacy-label-span{
 }
 .send-button{
     display: block;
+    align-items: center;
     min-width: 169px;
     height: 56px;
     font-family: "Roboto", sans-serif;
@@ -824,4 +826,5 @@ input[type="checkbox"]:checked + .user-privacy-label > .user-privacy-label-span{
     border: none;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-left: 95px;
 }
